added constant current source
CCS (high brightness LED driver)

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
 #################
+## EAGLE backup files (shure)
+#################
+
+*.*#1
+*.*#2
+*.*#3
+
+
+#################
 ## Eclipse
 #################
 
